--- a/css/utilities.css
+++ b/css/utilities.css
@@ -19,11 +19,11 @@
 }
 
 .btn:hover {
-    opacity: 0.9;
+    opacity: 0.7;
 }
 
 .btn-primary, .bg-primary {
-   background: #28a745;
+   background: #ff0000;
    color: #fff;
 }
 .btn-secondary, .bg-secondary {
@@ -31,7 +31,7 @@
    color: #fff;
 }
 .btn-dark, .bg-dark {
-   background: #333;
+   background: #222;
    color: #fff;
 }
 .btn-light, .bg-light {
